@@ -1,3 +1,9 @@
+Sat Aug 30 06:23:40 2014  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/lib/psych/scalar_scanner.rb: fix loading strings that
+	  look like integers but have a newline. Fixes GH #189
+	* test/psych/test_string.rb: test for fix
+
 Sat Aug 30 06:10:39 2014  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* ext/psych/lib/psych/visitors/to_ruby.rb: merge keys with a hash
